# 1BTech19Python.2

./: .replit  LICENSE  NWD.py  README.md  RSA.py  ad.py  cezar.py  huffman.py  kartapracy1.py  kartapracy2.py  kartapracy2a.py  kartapracy3.py  kartapracy3A.py  kartapracy3a.py  kartapracy3b.py  kartapracy3bkart.py  kartapracy6.py  listy1.py  nap1.py  pierwsze.py  powtorka.py  pusty1.py  pyproject.toml  reszta1.py  sprawdzian.py  t.py  ulamki.py  x.py
